[tool.poetry]
name = "x.py"
version = "0.1.0"
description = "Simplified Python scripting"
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
